# Projeto-Final-Topicos-IA

./: .gitignore  AE_Cartoon_TensorFlow.ipynb  README.md  VAE_Cartoon_Refatorado.ipynb  VAE_Cartoon_TensorFlow.ipynb  base_de_dados.txt  main.py  pyproject.toml  readme.md  requirements.txt
tf_vae/cartoon/training_weights/: dec_0.h5  dec_1.h5
