[project]
name = "projeto-final-topicos-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
]
